--- a/Experimen1.ipynb
+++ b/Experimen1.ipynb
@@ -16,10 +16,9 @@
     "- Start State\n",
     "- Goal test\n",
     "\n",
-    "Actions \\n\n",
+    "Actions:\n",
     "Transition Model\n",
-    "Completeness:  a search a is said to be complete if it guarantees to return a solution if at least any solution exist for any random input.\n",
-    "\n",
+    "- Completeness:  a search a is said to be complete if it guarantees to return a solution if at least any solution exist for any random input.\n",
     "Optimality\n",
     "Time complexity\n",
     "Space Complexity\n",
@@ -39,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -139,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
