--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -127,30 +127,30 @@
     }
    ],
    "source": [
-    "def bfs(graph,start,end):\n",
-    "    queue = []\n",
-    "    p = [ ]\n",
-    "    queue.append(start)\n",
-    "    for node in graph:\n",
-    "        if node == start:\n",
-    "            queue.append(node)\n",
-    "            while:\n",
-    "                print(\"H\")\n",
-    "                queue.pop(0)\n",
-    "                p.append(node)\n",
-    "                for item in graph[node]:\n",
-    "                    queue.append(item)\n",
-    "                q=False\n",
+    "#BFS\n",
+    "# Path: Experiment2.ipynb\n",
     "\n",
-    "        else:\n",
-    "            if node not in p:\n",
-    "                bfs(graph,node,end)\n",
-    "            else:\n",
-    "                pass\n",
-    "    return p\n",
-    "\n",
-    "p = bfs(graph,start,end)\n",
-    "print(p)                "
+    "def bfs(Graph,start,goal):\n",
+    "    explored = []\n",
+    "    queue = [[start]]\n",
+    "    if start == goal:\n",
+    "        print(\"Same Node\")\n",
+    "        return\n",
+    "    while queue:\n",
+    "        path = queue.pop(0)\n",
+    "        node = path[-1]\n",
+    "        if node not in explored:\n",
+    "            neighbours = Graph[node]\n",
+    "            for neighbour in neighbours:\n",
+    "                new_path = list(path)\n",
+    "                new_path.append(neighbour)\n",
+    "                queue.append(new_path)\n",
+    "                if neighbour == goal:\n",
+    "                    print(\"Shortest path = \",*new_path)\n",
+    "                    return\n",
+    "            explored.append(node)\n",
+    "    print(\"So sorry, but a connecting path doesn't exist :(\")\n",
+    "    return  "
    ]
   },
   {
@@ -177,12 +177,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "108095e740c160118120ad5e22811b4aca9f414a6f3c55c969835bc2c10848d1"
+    "hash": "f2ccb58c476f33ba3e3aee7ac07234ef6b8217ef24ad64d2a7d4fed1a57c1cd2"
    }
   }
  },
