--- a/Experiment3.ipynb
+++ b/Experiment3.ipynb
@@ -24,52 +24,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def Refill(node):\n",
-    "#     if node[0] == 0:\n",
-    "#         node[0] = 5\n",
-    "#     elif node[1] == 0:\n",
-    "#         node[1] = 4\n",
-    "#     return node\n",
-    "# def Empty(node):\n",
-    "#     if node[0] == 4:\n",
-    "#         node[0] = 0\n",
-    "#     elif node[1] == 4:\n",
-    "#         node[1] = 0\n",
-    "#     return node\n",
-    "# def Transfer(node):\n",
-    "#     # any one jug is zero and one full\n",
-    "#     if node[0] == 0 and node[1]==4:\n",
-    "#         if node[1]<=5:\n",
-    "#             node[0],node[1]= node[1],node[0]\n",
-    "#         else:\n",
-    "#             node[0],node[1]= 5,node[1]-5\n",
-    "#     elif node[0] == 5 and node[1] == 0:\n",
-    "#         if node[0]<=4:\n",
-    "#             node[0],node[1]= node[1],node[0]\n",
-    "#         else:\n",
-    "#             node[0],node[1]= node[0]-4,4\n",
-    "#     # now both are different\n",
-    "#     elif node[0] == 0 and node[1] != 4:\n",
-    "#         if node[1]<=5:\n",
-    "#             node[0],node[1]= node[1],node[0]\n",
-    "#         else:\n",
-    "#             node[0],node[1]= 5,node[1]-5\n",
-    "#     elif node[0] != 5 and node[1] == 0:\n",
-    "#         if node[0]<=4:\n",
-    "#             node[0],node[1]= node[1],node[0]\n",
-    "#         else:\n",
-    "#             node[0],node[1]= node[0]-4,4\n",
-    "#     return node   \n",
+    "# Water Jug problem\n",
     "\n",
-    "\n"
+    "MaxA = 5\n",
+    "MaxB = 4\n",
+    "\n",
+    "def getChild(node):\n",
+    "    a = node[0]\n",
+    "    b = node[1]\n",
+    "    # print(a, node, node[0], node[1])\n",
+    "\n",
+    "    child = []\n",
+    "    # Empty:\n",
+    "    if a != 0:\n",
+    "        child.append([0,b])\n",
+    "        # transfer A to B\n",
+    "        if b < MaxB:\n",
+    "            child.append([max(0, a+b-MaxB), min(MaxB, a+b)])\n",
+    "    if b != 0:\n",
+    "        child.append([a,0])\n",
+    "        # transfer B to A\n",
+    "        if a < MaxA:\n",
+    "            child.append([min(MaxA, a+b), max(0, a+b-MaxA)])\n",
+    "    \n",
+    "    # Fill:\n",
+    "    if a < MaxA:\n",
+    "        child.append([MaxA, b])\n",
+    "    if b < MaxB:\n",
+    "        child.append([a, MaxB])\n",
+    "    \n",
+    "    return child\n",
+    "\n",
+    "\n",
+    "def bfs(start, goal):\n",
+    "    current = start\n",
+    "    q = [start]\n",
+    "    visited = []\n",
+    "    parent = []\n",
+    "\n",
+    "    while (len(q) != 0) and current != goal:\n",
+    "        q.pop(0)\n",
+    "        visited.append(current)\n",
+    "        # print(\":  child: \",getChild(current), \"\\n:  current: \",current, \":  queue: \", q)\n",
+    "        for i in getChild(current):\n",
+    "            q.append(i)\n",
+    "        current = q[0]\n",
+    "    \n",
+    "    path = [goal]\n",
+    "    \n",
+    "    lv = goal\n",
+    "    for i in visited[::-1]:\n",
+    "        if lv in getChild(i):\n",
+    "            path.append(i)\n",
+    "            lv = i\n",
+    "        else:\n",
+    "            continue\n",
+    "    print(\"Traversal:\",(visited))\n",
+    "    print(\"Path:\",(path[::-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dfs(start, goal, stack):\n",
+    "    child = getChild(start)\n",
+    "    stack.append(start)\n",
+    "    if start == goal:\n",
+    "        return [start]\n",
+    "\n",
+    "    for i in child:\n",
+    "        if i not in stack:\n",
+    "            leaf = dfs(i, goal, stack)\n",
+    "            if leaf != None:\n",
+    "                if goal in leaf:\n",
+    "                    print(start)\n",
+    "                    return leaf.append(start)\n",
+    "    \n",
+    "    return [stack]"
+   ]
   },
   {
    "cell_type": "code",
@@ -80,22 +115,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0]]\n"
+      "Traversal: [[0, 0], [5, 0], [0, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [1, 0], [5, 1], [0, 4], [0, 0], [1, 4], [5, 4], [0, 4], [1, 0], [5, 0], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 3], [4, 4], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 1], [2, 4], [5, 0], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [3, 0], [5, 3], [0, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 4], [4, 0], [5, 3], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [4, 0], [5, 4], [0, 0], [0, 1], [5, 0], [1, 4], [0, 0], [1, 4], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [1, 0], [5, 1], [0, 4], [0, 0], [1, 4], [5, 4], [0, 4], [1, 0], [5, 0], [5, 4], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [1, 4], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 3], [4, 4], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [0, 0], [4, 0], [5, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 3], [4, 4], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 4], [5, 0], [5, 0], [0, 4], [0, 0], [0, 4], [5, 0], [4, 4], [0, 4], [5, 0], [0, 0], [1, 4], [5, 4], [0, 0], [4, 0], [5, 4], [5, 0], [0, 4], [0, 0], [1, 0], [5, 1], [0, 4], [0, 0], [1, 4], [5, 4], [0, 4], [1, 0], [5, 0], [5, 4], [0, 0], [1, 0], [5, 1], [0, 4], [0, 4]]\n",
+      "Path: [[0, 0], [5, 0], [1, 4], [1, 0], [0, 1], [5, 1], [2, 4], [2, 0]]\n"
      ]
     }
    ],
    "source": [
-    "jg1 =5\n",
-    "jg2 =4\n",
-    "s = [0,0]\n",
-    "g = [2,0]\n",
-    "current = []\n",
-    "childs = []\n",
-    "visited = []\n",
-    "current.append(s)\n",
-    "visited.append(s)\n",
-    "while current:\n",
-    "    node = \n"
+    "start = [0,0]\n",
+    "goal = [2,0]\n",
+    "\n",
+    "bfs(start, goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2]\n",
+      "path:  [[[0, 0], [5, 0], [1, 4], [0, 4], [4, 0], [4, 4], [5, 3], [0, 3], [3, 0], [3, 4], [5, 2], [0, 2], [2, 0], [5, 4], [1, 0], [0, 1], [5, 1], [2, 4]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = dfs(start, goal, [])\n",
+    "print(\"path: \", path[::-1])"
    ]
   },
   {
@@ -108,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -122,12 +170,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f2ccb58c476f33ba3e3aee7ac07234ef6b8217ef24ad64d2a7d4fed1a57c1cd2"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
